--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="./dist/main.js"></script>
   </body>
 </html>
