--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <body>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
   <script src="https://d3js.org/d3-transition.v1.min.js"></script>
     <script src="./dist/main.js"></script>
     <header>Langauges of NYC</header>
