finished, just need to refactor code

--- a/index.html
+++ b/index.html
@@ -34,9 +34,18 @@
         </a>
       </ul>
     </div>
+    <div class="name">Jason Kopacz</div>
     <style>
 
 
+      .name {
+        position: absolute;
+        bottom: 2em;
+        right: 13em;
+        font-size: 30px;
+        font-family: 'Cinzel', serif;
+        color: white;
+      }
       .words-header {
         display: none;
         position: absolute;
