removed the useless commas

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         .data(data)
                         .enter()
                         .append("text")
-                        .text(function (d) {return `${d.word}: ${d.translation}, \n`})
+                        .text(function (d) {return `${d.word}: ${d.translation} \n`})
                         // let translations = d3.select(".words-yo")
                         // .data(Object.values(data.words))
                         // .enter()
