--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
       .name {
         position: absolute;
-        bottom: 2em;
-        right: 13em;
+        bottom: 1em;
+        right: 16em;
         font-size: 30px;
         font-family: 'Cinzel', serif;
         color: white;
@@ -96,7 +96,10 @@
         box-shadow: 0px 0px 40px 5px rgb(158, 202, 225);
       }
 
+      
+
       .words-yo {
+        /* background-color: rgb(158, 202, 225); */
         width: 35%;
         height:fit-content;
         column-count: 3;
@@ -114,6 +117,19 @@
         color: white;
       }
 
+@media only screen and (min-width: 1000px) {
+        .words-yo {
+          width: 25%;
+          height:fit-content;
+          column-count: 3;
+          column-width: 30px;
+          flex-direction: column;
+          position: absolute;
+          top: 5em;
+          right: 6em;
+          font-size: 12px;
+        }
+      }
       header {
         color: white;
         height: 70px;
@@ -127,6 +143,11 @@
         color: white;
         margin: 0;
         font-family: 'Cinzel', serif;
+      }
+
+      .boros {
+        font-weight: bold;
+        text-shadow: 0px 0px 7px rgb(190,108,132)
       }
 
     </style>
