--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <a href="https://angel.co/jason-kopacz" target="_blank">
           <img src="angel.jpg" alt="AngelList" width="50px" height="50px">  
         </a>
+        <a href="https://alaizard.github.io/JasonKopacz/" target="_blank">
+          <img src="personal.jpeg" alt="Personal" width="inherit" height="">  
+        </a>
       </ul>
     </div>
     <div class="name">Jason Kopacz</div>
