added personal site

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <img src="angel.jpg" alt="AngelList" width="50px" height="50px">  
         </a>
         <a href="https://alaizard.github.io/JasonKopacz/" target="_blank">
-          <img src="personal.jpeg" alt="Personal" width="inherit" height="">  
+          <img src="personal.jpeg" alt="Personal" width="66px" height="44px">  
         </a>
       </ul>
     </div>
